[package]
name = "sqlui"
version = "0.1.0"
edition = "2021"
description = "Blazing Fast, lightweight, small binary and crossplatform, database client"
keywords = ["gui", "mysql", "database", "client", "tool"]
categories = ["database"]
license = "GPL-3.0-or-later"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.2"
fltk-table = "0.2.1"
fltk-theme = "0.4.0"
log = { version = "0.4", features = ["max_level_info", "release_max_level_warn"] }
mysql = { version = "22.1.0", default-features = false, features = ["rustls-tls", "buffer-pool"] }
flate2 = { version = "1.0.23", default-features = false, features = ["zlib"] }
mysql_common = { version = "0.28.2", default-features = false, features = ["bigdecimal03", "time03", "uuid"]}
tokio = { version = "1.17.0", features = ["full"] }
crossbeam-channel = "0.5"
smol = "1.2.5"
simple-logging = "2.0.2"
once_cell = "1.10.0"
toml = "0.5"
serde_derive = "1.0"
serde = "1.0.97"
